templates/pomerium_template.yaml
---
# Source: pomerium/templates/authenticate-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: release-name-pomerium-authenticate
  labels:
    app: pomerium-authenticate
    chart: pomerium-1.0.6
    release: release-name
    heritage: Helm
spec:
  type: ClusterIP
  ports:
    - port: 443
      targetPort: https
      protocol: TCP
      name: https
  selector:
    app: pomerium-authenticate
    release: release-name
---
# Source: pomerium/templates/authorize-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: release-name-pomerium-authorize
  labels:
    app: pomerium-authorize
    chart: pomerium-1.0.6
    release: release-name
    heritage: Helm
spec:
  type: ClusterIP
  ports:
    - port: 443
      targetPort: https
      protocol: TCP
      name: https
  selector:
    app: pomerium-authorize
    release: release-name
---
# Source: pomerium/templates/proxy-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: release-name-pomerium-proxy
  labels:
    app: pomerium-proxy
    chart: pomerium-1.0.6
    release: release-name
    heritage: Helm
spec:
  type: ClusterIP
  ports:
    - port: 443
      targetPort: https
      protocol: TCP
      name: https
  selector:
    app: pomerium-proxy
    release: release-name
---
# Source: pomerium/templates/authenticate-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: pomerium-authenticate
    chart: pomerium-1.0.6
    heritage: Helm
    release: release-name
  name: release-name-pomerium-authenticate
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pomerium-authenticate
      release: release-name
  template:
    metadata:
      labels:
        app: pomerium-authenticate
        chart: pomerium-1.0.6
        heritage: Helm
        release: release-name
    spec:
      containers:
      - name: pomerium
        image: pomerium/pomerium:latest
        imagePullPolicy: Always
        args:
        ports:
          - containerPort: 443
            name: https
            protocol: TCP
        livenessProbe:
          httpGet:
            path: /ping
            port: https
            scheme: HTTPS
        readinessProbe:
          httpGet:
            path: /ping
            port: https
            scheme: HTTPS
      resources:
          {}
---
# Source: pomerium/templates/authorize-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: pomerium-authorize
    chart: pomerium-1.0.6
    heritage: Helm
    release: release-name
  name: release-name-pomerium-authorize
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pomerium-authorize
      release: release-name
  template:
    metadata:
      labels:
        app: pomerium-authorize
        chart: pomerium-1.0.6
        heritage: Helm
        release: release-name
    spec:
      containers:
      - name: pomerium
        image: pomerium/pomerium:latest
        imagePullPolicy: Always
        args:
        ports:
          - containerPort: 443
            name: https
            protocol: TCP
        livenessProbe:
          httpGet:
            path: /ping
            port: https
            scheme: HTTPS
        readinessProbe:
          httpGet:
            path: /ping
            port: https
            scheme: HTTPS
        volumeMounts:
        - mountPath: /etc/pomerium/
          name: policy
      volumes:
      - name: policy
        configMap:
          name: release-name-pomerium
      resources:
          {}
---
# Source: pomerium/templates/proxy-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: pomerium-proxy
    chart: pomerium-1.0.6
    heritage: Helm
    release: release-name
  name: release-name-pomerium-proxy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pomerium-proxy
      release: release-name
  template:
    metadata:
      labels:
        app: pomerium-proxy
        chart: pomerium-1.0.6
        heritage: Helm
        release: release-name
    spec:
      containers:
      - name: pomerium
        image: pomerium/pomerium:latest
        imagePullPolicy: Always
        args:
        ports:
          - containerPort: 443
            name: https
            protocol: TCP
        livenessProbe:
          httpGet:
            path: /ping
            port: https
            scheme: HTTPS
        readinessProbe:
          httpGet:
            path: /ping
            port: https
            scheme: HTTPS
        volumeMounts:
        - mountPath: /etc/pomerium/
          name: policy
      volumes:
      - name: policy
        configMap:
          name: release-name-pomerium
      resources:
          {}
---
# Source: pomerium/templates/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: release-name-pomerium
  labels:
    app.kubernetes.io/name: pomerium
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/managed-by: Helm
    helm.sh/chart: pomerium-1.0.6
spec:
  tls:
    - secretName: 
      hosts:
        - external-httpbin.corp.pomerium.io
        - weirdlyssl.corp.pomerium.io
        - hello.corp.pomerium.io
        - authorize.monitor.alpha.dev.banzaicloud.com
        - authenticate.monitor.alpha.dev.banzaicloud.com
  rules:
    - host: external-httpbin.corp.pomerium.io
      http:
        paths:
          - paths:
            backend:
              serviceName: release-name-pomerium-proxy
              servicePort: https
    - host: weirdlyssl.corp.pomerium.io
      http:
        paths:
          - paths:
            backend:
              serviceName: release-name-pomerium-proxy
              servicePort: https
    - host: hello.corp.pomerium.io
      http:
        paths:
          - paths:
            backend:
              serviceName: release-name-pomerium-proxy
              servicePort: https
    - host: authorize.monitor.alpha.dev.banzaicloud.com
      http:
        paths:
          - paths:
            backend:
              serviceName: release-name-pomerium-authorize
              servicePort: https
    - host: authenticate.monitor.alpha.dev.banzaicloud.com
      http:
        paths:
          - paths:
            backend:
              serviceName: release-name-pomerium-authenticate
              servicePort: https
